syntax = "proto3";
package pub_worker;
option go_package = "/consul/grpcx/pb";

message GenerateIdReq {
  int64 node = 1;
  string kind = 2;
}
message GenerateIdRes {
  int64 value = 1;
}

message RPCLoginReq {
  string appid = 1;
  string nonce = 2;
  int64 time = 3;
  string signature = 4;
}
message RPCLoginRes {
  string token = 1;
  int64 expired = 2;
}

service PubWorker{
  rpc GenerateId(GenerateIdReq) returns (GenerateIdRes){}
  rpc RPCLogin(RPCLoginReq) returns (RPCLoginRes){}
}
